--- a/CountdownDemo/Base.lproj/Main.storyboard
+++ b/CountdownDemo/Base.lproj/Main.storyboard
@@ -52,6 +52,10 @@
                                     <action selector="pickerDidChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="Fn6-tC-eEf"/>
                                 </connections>
                             </datePicker>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bG6-UT-Wcn">
+                                <rect key="frame" x="0.0" y="115" width="414" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -65,6 +69,7 @@
                         <outlet property="pickerView" destination="ArA-O2-Kmk" id="fOv-6R-Kn5"/>
                         <outlet property="startButton" destination="Gc0-PJ-M0K" id="peq-Xq-FJY"/>
                         <outlet property="timeLabel" destination="fIl-hu-eoF" id="eMT-UA-KWV"/>
+                        <outlet property="timePicker" destination="bG6-UT-Wcn" id="5Oj-rg-g08"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
