--- a/CountdownDemo/Base.lproj/Main.storyboard
+++ b/CountdownDemo/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bG6-UT-Wcn">
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bG6-UT-Wcn">
                                 <rect key="frame" x="0.0" y="115" width="414" height="216"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
@@ -64,11 +64,6 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rkN-7Q-qku" secondAttribute="trailing" constant="16" id="fMk-0O-Tap"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="bG6-UT-Wcn"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
                         <outlet property="datePicker" destination="ArA-O2-Kmk" id="fOv-6R-Kn5"/>
