--- a/CountdownDemo/Base.lproj/Main.storyboard
+++ b/CountdownDemo/Base.lproj/Main.storyboard
@@ -19,16 +19,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="rkN-7Q-qku">
-                                <rect key="frame" x="16" y="654.5" width="382" height="187.5"/>
+                                <rect key="frame" x="16" y="362.5" width="382" height="479.5"/>
                                 <subviews>
+                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bG6-UT-Wcn" customClass="CountdownPicker" customModule="CountdownDemo" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="216"/>
+                                    </pickerView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="fIl-hu-eoF">
-                                        <rect key="frame" x="0.0" y="0.0" width="382" height="119.5"/>
+                                        <rect key="frame" x="0.0" y="224" width="382" height="119.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gc0-PJ-M0K">
-                                        <rect key="frame" x="0.0" y="127.5" width="382" height="60"/>
+                                        <rect key="frame" x="0.0" y="351.5" width="382" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="JaI-n1-Jmx"/>
                                         </constraints>
@@ -40,22 +43,21 @@
                                             <action selector="startButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cEJ-S0-nTe"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9ty-Yv-Uyq">
+                                        <rect key="frame" x="0.0" y="419.5" width="382" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="I68-yx-BCI"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
+                                        <state key="normal" title="RESET" backgroundImage="blue-button-trimmed">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="resetButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oJH-jh-2hc"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </stackView>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bG6-UT-Wcn">
-                                <rect key="frame" x="0.0" y="115" width="414" height="216"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </pickerView>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="countDownTimer" minuteInterval="1" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ArA-O2-Kmk">
-                                <rect key="frame" x="0.0" y="396" width="414" height="216"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <date key="date" timeIntervalSinceReferenceDate="578368793.170452">
-                                    <!--2019-05-01 01:59:53 +0000-->
-                                </date>
-                                <connections>
-                                    <action selector="pickerDidChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="Fn6-tC-eEf"/>
-                                </connections>
-                            </datePicker>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -66,7 +68,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="datePicker" destination="ArA-O2-Kmk" id="fOv-6R-Kn5"/>
+                        <outlet property="countdownPicker" destination="bG6-UT-Wcn" id="pnN-wu-mIn"/>
                         <outlet property="startButton" destination="Gc0-PJ-M0K" id="peq-Xq-FJY"/>
                         <outlet property="timeLabel" destination="fIl-hu-eoF" id="eMT-UA-KWV"/>
                         <outlet property="timePicker" destination="bG6-UT-Wcn" id="5Oj-rg-g08"/>
